--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "code-club-projects",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "react-scripts": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
